--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero_content">
             <div class="circles">
                 <div class="textz">
-                    <p><b>Samuel Ochaka </b>| Full stack dev | Digital artist</p>
+                    <p><b>Samuel Ochaka </b></p>
                 </div>
             <div class="image_box">
                 <div class="image">
