--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero_content">
             <div class="circles">
                 <div class="textz">
-                    <p><b>Samuel Ochaka </b></p>
+                    <p><b>Samuel</b></p>
                 </div>
             <div class="image_box">
                 <div class="image">
@@ -102,7 +102,7 @@
         const text = document.querySelector('.textz')
         const work = document.querySelector(".work")
         const contact = document.querySelector(".contacts")
-        text.innerHTML = text.innerText.split('').map((char, i) => `<span style="transform:rotate(${(i * 6)-60}deg)">${char}</span>`).join('')
+        text.innerHTML = text.innerText.split('').map((char, i) => `<span style="transform:rotate(${(i * 6)-10}deg)">${char}</span>`).join('')
         
         
 
